# mimir

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  setup_esm3.sh
mimir/: __init__.py  dataset.py  model_utils.py  sampler.py  tokenizer.py
notebooks/: mimir_training.ipynb
scripts/: dataset_utils.py  download_weights.py  estimate_training.py  generate_dataset.py  generate_mapping_dataset.py  generate_peptide_dataset.py  list_pdz_targets.py  list_sh3_targets.py  sample_peptides.py  test_esm3.py  train.py
