[project]
name = "mimir-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "biopython>=1.86",
    "bitsandbytes>=0.45.0",
    "esm>=3.2.1.post1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "peft>=0.18.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "torch>=2.5.1",
    "transformers>=4.48.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimir"]
